force-app/main/default/objects/Log_API__e/Log_API__e.object-meta.xml
<CustomObject>
    <label>Log API</label>
    <pluralLabel>Log API</pluralLabel>
</CustomObject>