force-app/main/default/objects/Log_API__e/fields/Input_Log__c.field-meta.xml
<CustomField>
    <fullName>Input_Log__c</fullName>
    <label>Input Log</label>
    <length>2002</length>
    <type>LongTextArea</type>
</CustomField>