force-app/main/default/objects/Log_API__e/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <length>40</length>
    <type>Text</type>
</CustomField>